added cytoscape1 page with contextmenu and modified graph in cytoscape page
added cytoscape1 that includes a graph with a ctxmenu (in javascript)

modified graph on cytoscape page so that edges' size is proportional to number of communications between nodes

--- a/data/config.ini
+++ b/data/config.ini
@@ -7,3 +7,6 @@ navbar = #75abd2
 # Define the sigma.js script
 script = https://cdnjs.cloudflare.com/ajax/libs/sigma.js/1.2.0/sigma.min.js
 
+[Cytoscape]
+# Define the cytoscape.js script
+script = https://unpkg.com/cytoscape/dist/cytoscape.min.js
