n mode to 1 mode algorithme and some bug fixes

--- a/data/config.ini
+++ b/data/config.ini
@@ -1,3 +1,7 @@
+[General]
+# Define the general settings
+title = Graph Visualization Tools
+
 [Colors]
 # Define the constant colors
 background = #121212
