changed selection colore
Changed selection colore. Now when nodes are selected they have a darker shade of their original colore.

--- a/data/config.ini
+++ b/data/config.ini
@@ -14,3 +14,7 @@ script = https://cdnjs.cloudflare.com/ajax/libs/sigma.js/1.2.0/sigma.min.js
 [Cytoscape]
 # Define the cytoscape.js script
 script = https://unpkg.com/cytoscape/dist/cytoscape.min.js
+
+[Chroma]
+# Define the chroma.js script
+script = https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js
