Added a big data network graph page

--- a/data/config.ini
+++ b/data/config.ini
@@ -14,6 +14,8 @@ script = https://cdnjs.cloudflare.com/ajax/libs/sigma.js/1.2.0/sigma.min.js
 [Cytoscape]
 # Define the cytoscape.js script
 script = https://unpkg.com/cytoscape/dist/cytoscape.min.js
+jquery = http://code.jquery.com/jquery-2.0.3.min.js
+qtip = http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.2.0/jquery.qtip.js
 
 [Chroma]
 # Define the chroma.js script
