--- a/data/config.ini
+++ b/data/config.ini
@@ -16,6 +16,7 @@ script = https://cdnjs.cloudflare.com/ajax/libs/sigma.js/1.2.0/sigma.min.js
 script = https://unpkg.com/cytoscape/dist/cytoscape.min.js
 jquery = http://code.jquery.com/jquery-2.0.3.min.js
 qtip = http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.2.0/jquery.qtip.js
+qtip_css = http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.2.0/jquery.qtip.css
 
 [Chroma]
 # Define the chroma.js script
